# AstroSim

./: .gitignore  Cargo.toml  README.md  index.html  wasi.js
.github/workflows/: deploy.yml  desktop.yml
kernels/: eih.cu
shaders/: grid.frag  grid.spv  grid.vert  grid_frag.spv  grid_vert.spv  orbit.frag  orbit.vert  orbit_frag.spv  orbit_vert.spv  raytrace.comp  raytrace.spv  skybox.frag  skybox.vert  skybox_frag.spv  skybox_vert.spv  sphere.frag  sphere.vert  sphere_frag.spv  sphere_vert.spv
src/: app.rs  ephemeris.rs  lib.rs  main.rs  solar_system.json
src/physics/: cuda.rs  kepler.rs  mod.rs  vulkan_compute.rs
src/render/: imgui_renderer.rs  interop.rs  mod.rs  renderer.rs  swapchain.rs  vulkan_context.rs
