[package]
name = "AstroSim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nalgebra = "0.34.2"
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wgpu = "29.0.3"
winit = { version = "0.30.13", features = ["x11", "wayland"] }
imgui = "0.12.0"
imgui-wgpu = "0.28.0"
bytemuck = { version = "1.16", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
web-sys = { version = "0.3", features = ["Document", "Window", "HtmlCanvasElement", "Response", "Performance", "Request", "RequestInit", "RequestMode"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
imgui-winit-support = "0.13.0"
cudarc = { version = "0.12", features = ["driver", "nvrtc", "cuda-12020"] }
libloading = "0.8"
pollster = "0.3"
anise = "0.9.6"
hifitime = "4"
env_logger = "0.11"
hyperdual = "=1.4.0"
